# oahu-ai-fieldnotes

./: .gitignore  AGENTS.md  README.md  fieldnotes.config.toml  package-lock.json  package.json  pyproject.toml  vivliostyle.config.js  vivliostyle.cover.config.js  vivliostyle.database-print.config.js  vivliostyle.print.config.js  vivliostyle.proof.config.js
apps/desktop/BookMaker/: Package.swift  README.md
apps/desktop/BookMaker/scripts/: build_bookmaker_app.sh
assets/fonts/: README.md
design/: oahu_ai_field_notes_book_mockup.html
design/illustrations/: BOOK-ILLUSTRATION-SYSTEM.md  WORKBENCH-FIGURES-HANDOFF.md  oahu-vol-1.toml
design/media/: oahu-vol-1.toml
migrations/: env.py
migrations/versions/: 0001_knowledge_to_book_schema.py  0002_ingestion_review_workflow.py
schema/: postgres_schema.sql
scripts/: build-download-pdf.mjs  build-print.mjs  flatten-cover.mjs  flatten-interior.mjs  generate-cover.mjs  print-filenames.mjs  verify-print.mjs
src/fieldnotes/: __init__.py  book_media.py  book_text.py  chapters.py  chat_app.py  cli.py  config.py  extraction.py  illustration_generation.py  illustrations.py  ingest.py  openai_ocr.py  production.py  rendering.py  review.py  schemas.py  server.py  workflow.py
src/fieldnotes/db/: __init__.py  models.py  seed.py  session.py
src/fieldnotes/static/: app.css
src/fieldnotes/templates/: base.html  candidate_detail.html  chapter_board.html  chapter_editor.html  context_workbench.html  illustrations.html  source_detail.html
styles/: book.css  cover.css  print-upload.css
(+26 files in other folders)
