[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oahu-ai-field-notes"
version = "0.1.0"
description = "Knowledge-to-book data model for agent-driven longform publishing."
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0.44,<3",
  "alembic>=1.17,<2",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "openai>=2.0,<3",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.0,<9",
]
postgres = [
  "psycopg[binary]>=3.2,<4",
]

[project.scripts]
fieldnotes = "fieldnotes.cli:main"
fieldnotes-seed = "fieldnotes.db.seed:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fieldnotes = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
